Fix post list item too high in Safari

--- a/source/css/post-list.scss
+++ b/source/css/post-list.scss
@@ -29,7 +29,7 @@
     color: var(--color-text-primary);
     text-decoration: none;
     display: block;
-    height: stretch;
+    height: 100%;
 
     .cover-img {
       overflow: hidden;
